--- a/app/translations/validators.en.yaml
+++ b/app/translations/validators.en.yaml
@@ -22,3 +22,8 @@ bug:
         max: 'Title cannot be longer than 128 characters.'
     assignee:
         not_blank: 'It must be assigned to a User.'
+project:
+    id:
+        max: 'ID cannot be longer than 5 characters.'
+    name:
+        max: 'Name cannot be longer than 128 characters.'
